Fix z-index issue

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   width:101%;
   margin-left:-1%;
   margin-top:-1%;
-  z-index:10000;
+  z-index:10334295872398750923000;
   pointer-events:none;
 }
 
@@ -457,7 +457,7 @@ h6 {
   color:white;
   text-shadow: 0 0 5px #000;
   opacity: 0;
-  z-index:100000093287594237509284375982743905780934;
+  z-index:100;
 }
 
 .explosion {
